Updated config info

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,11 @@
 name = "tesco"
 version = "0.2.0"
 description = ""
-authors = ["Your Name <you@example.com>"]
+authors = ["Miles Budden <miles@budden.net>"]
+readme = "README.md"
+license = "MIT"
+homepage = "https://github.com/pbexe/tesco"
+
 
 [tool.poetry.dependencies]
 python = "^3.7"
